# malnm

./: README.md  pyproject.toml
.ipynb_checkpoints/: pyproject-checkpoint.toml
src/malnm/: __init__.py  methods.py
src/malnm/.ipynb_checkpoints/: __init__-checkpoint.py  methods-checkpoint.py
