[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "malnm"
version = "0.1.2"
description = "Библиотека численных методов для экзамена"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Твоё Имя", email = "tvoy@email.com"}
]
keywords = ["numerical-methods", "math", "education"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.hatch.build.targets.wheel]
packages = ["src/malnm"]